# kaggle-house-prices

./: .gitignore  README.md  pyproject.toml
exp/000/: 00_download.ipynb  01_polars.ipynb  02_eda.ipynb  03_build_simple_moel.ipynb
exp/000/config/: config.yaml
exp/000/src/: seed.py
